; ModuleID = '/home/carl/AnghaBench/wcdb/android/sqlcipher/extr_sqlite3.c_selectWindowRewriteSelectCb.c'
source_filename = "/home/carl/AnghaBench/wcdb/android/sqlcipher/extr_sqlite3.c_selectWindowRewriteSelectCb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.WindowRewrite* }
%struct.WindowRewrite = type { i32* }

@WRC_Continue = common dso_local global i32 0, align 4
@WRC_Prune = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i32*)* @selectWindowRewriteSelectCb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @selectWindowRewriteSelectCb(%struct.TYPE_6__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.WindowRewrite*, align 8
  %7 = alloca i32*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load %struct.WindowRewrite*, %struct.WindowRewrite** %10, align 8
  store %struct.WindowRewrite* %11, %struct.WindowRewrite** %6, align 8
  %12 = load %struct.WindowRewrite*, %struct.WindowRewrite** %6, align 8
  %13 = getelementptr inbounds %struct.WindowRewrite, %struct.WindowRewrite* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  store i32* %14, i32** %7, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = icmp eq i32* %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = load i32, i32* @WRC_Continue, align 4
  store i32 %19, i32* %3, align 4
  br label %32

20:                                               ; preds = %2
  %21 = load i32*, i32** %5, align 8
  %22 = load %struct.WindowRewrite*, %struct.WindowRewrite** %6, align 8
  %23 = getelementptr inbounds %struct.WindowRewrite, %struct.WindowRewrite* %22, i32 0, i32 0
  store i32* %21, i32** %23, align 8
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %25 = load i32*, i32** %5, align 8
  %26 = call i32 @sqlite3WalkSelect(%struct.TYPE_6__* %24, i32* %25)
  %27 = load i32*, i32** %7, align 8
  %28 = load %struct.WindowRewrite*, %struct.WindowRewrite** %6, align 8
  %29 = getelementptr inbounds %struct.WindowRewrite, %struct.WindowRewrite* %28, i32 0, i32 0
  store i32* %27, i32** %29, align 8
  br label %30

30:                                               ; preds = %20
  %31 = load i32, i32* @WRC_Prune, align 4
  store i32 %31, i32* %3, align 4
  br label %32

32:                                               ; preds = %30, %18
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i32 @sqlite3WalkSelect(%struct.TYPE_6__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
